--- a/.github/workflows/flutter-ci-cd.yml
+++ b/.github/workflows/flutter-ci-cd.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2.12.0
         with:
-          flutter-version: '3.10.6'  # Match your Flutter version
+          flutter-version: '3.8.1'
           cache: true
 
       - name: Run Tests
