--- a/.github/workflows/flutter-ci-cd.yml
+++ b/.github/workflows/flutter-ci-cd.yml
@@ -74,4 +74,4 @@ jobs:
           name: Release ${{ github.ref_name }}
           files: build/app/outputs/flutter-apk/app-release.apk
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
