--- a/.github/workflows/flutter-ci-cd.yml
+++ b/.github/workflows/flutter-ci-cd.yml
@@ -74,4 +74,4 @@ jobs:
           files: build/app/outputs/flutter-apk/app-release.apk
         env:
           # Corrected the secret name to the standard GITHUB_TOKEN
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
