--- a/.github/workflows/flutter-ci-cd.yml
+++ b/.github/workflows/flutter-ci-cd.yml
@@ -75,3 +75,81 @@ jobs:
         env:
           # Corrected the secret name to the standard GITHUB_TOKEN
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
+
+  ios-build:
+    name: Build iOS
+    runs-on: macos-latest # iOS builds require a macOS runner
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2.12.0
+        with:
+          flutter-version: '3.32.8' # Use the same Flutter version for consistency
+          cache: true
+
+      - name: Verify Flutter Setup
+        run: |
+          flutter --version
+          echo "Flutter setup completed for version 3.32.8"
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Install CocoaPods
+        run: |
+          sudo gem install cocoapods # Install CocoaPods, often required for iOS projects
+          pod setup
+
+      - name: Set up iOS Code Signing
+        env:
+          # These secrets will need to be configured in your GitHub repository settings.
+          # For more secure handling, consider using a dedicated action for code signing.
+          # https://github.com/apple-actions/import-codesign-certs
+          P12_BASE64: ${{ secrets.P12_BASE64 }}
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+          PROVISIONING_PROFILE_BASE64: ${{ secrets.PROVISIONING_PROFILE_BASE64 }}
+        run: |
+          # Decode and import the .p12 certificate
+          echo "$P12_BASE64" | base64 --decode > temp.p12
+          security import temp.p12 -k ~/Library/Keychains/login.keychain-db -P "$P12_PASSWORD" -T /usr/bin/codesign
+          rm temp.p12
+
+          # Decode and install the provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          echo "$PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/temp.mobileprovision
+        working-directory: ./ios
+
+      - name: Update Info.plist for build number (Optional, but good practice)
+        run: |
+          # Increment the build number for each CI/CD run, or set it from a variable
+          # You might want to get the current build number and increment it,
+          # or use a fixed build number for CI/CD.
+          # For simplicity, this example just sets a placeholder.
+          # You can use 'agvtool new-version -all <version_number>' if agvtool is configured.
+          echo "Updating Info.plist build number..."
+          PLIST_PATH="Runner/Info.plist"
+          BUILD_NUMBER=$(date +%s) # Example: Use timestamp as build number
+          /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $BUILD_NUMBER" "$PLIST_PATH"
+          echo "Set CFBundleVersion to $BUILD_NUMBER"
+        working-directory: ./ios
+
+      - name: Build iOS Archive (IPA)
+        run: flutter build ipa --release
+
+      - name: Upload IPA Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ios-ipa
+          path: build/ios/archive/Runner.xcarchive/Products/Applications/*.ipa # Adjust path if necessary
+          retention-days: 7
+
+      - name: Upload IPA to GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
+          files: build/ios/archive/Runner.xcarchive/Products/Applications/*.ipa # Adjust path if necessary
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }} # Use your GitHub Token
