--- a/.github/workflows/flutter-ci-cd.yml
+++ b/.github/workflows/flutter-ci-cd.yml
@@ -1,77 +1,46 @@
-name: Flutter CI/CD
-
 on:
+  pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
-
-permissions:
-  contents: write
-
+name: "Build & Release"
 jobs:
-  android-build:
-    name: Build Android
-    runs-on: ubuntu-latest
+  build:
+    name: Build & Release
+    runs-on: macos-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2.12.0
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
-          # This version was updated to a newer version (3.32.8)
-          # to meet the project's Dart SDK requirements as suggested by the error log.
-          flutter-version: '3.32.8'
-          cache: true
-
-      - name: Verify Flutter Setup
-        run: |
-          flutter --version
-          echo "Flutter setup completed for version 3.32.8"
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Set up key.properties
-        run: |
-          # The working-directory is already 'android', so we don't need to specify 'android/'.
-          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" > key.properties
-          echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> key.properties
-          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> key.properties
-          echo "${{ secrets.STORE_FILE_CONTENT }}" | base64 --decode > key.jks
-        working-directory: ./android
-
-      - name: Set up local.properties
-        run: |
-          # The working-directory is already 'android', so we don't need to specify 'android/'.
-          echo "flutter.sdk=$FLUTTER_ROOT" > local.properties
-        working-directory: ./android
-
-      - name: Build Release AAB and APK
-        run: |
-          flutter build appbundle --release
-          flutter build apk --release
-
-      - name: Upload AAB Artifact
-        uses: actions/upload-artifact@v4
+          distribution: 'zulu'
+          java-version: '12'
+      - uses: subosito/flutter-action@v2
         with:
-          name: android-aab
-          path: build/app/outputs/bundle/release/app-release.aab
-          retention-days: 7
+          channel: 'stable'
+          architecture: x64
 
-      - name: Upload APK Artifact
-        uses: actions/upload-artifact@v4
+      - run: flutter build apk --release --split-per-abi
+      - run: |
+          flutter build ios --no-codesign
+          cd build/ios/iphoneos
+          mkdir Payload
+          cd Payload
+          ln -s ../Runner.app
+          cd ..
+          zip -r app.ipa Payload
+      - name: Push to Releases
+        uses: ncipollo/release-action@v1
         with:
-          name: android-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
-          retention-days: 7
+          artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
+          tag: v1.0.${{ github.run_number }}
+          token: ${{ secrets.TOKEN }}
 
-      - name: Upload APK to GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.ref_name }}
-          name: Release ${{ github.ref_name }}
-          files: build/app/outputs/flutter-apk/app-release.apk
-        env:
-          # Corrected the secret name to the standard GITHUB_TOKEN
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+
+
+
+
+
+# push to master, main, develop
+# pull request on main master
