--- a/.github/workflows/flutter-ci-cd.yml
+++ b/.github/workflows/flutter-ci-cd.yml
@@ -1,3 +1,4 @@
+name: "Build & Release"
 on:
   pull_request:
     branches:
@@ -5,7 +6,7 @@ on:
   push:
     branches:
       - main
-name: "Build & Release"
+
 jobs:
   build:
     name: Build & Release
@@ -15,12 +16,11 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: '12'
+          java-version: '11' # Changed from 12 to 11
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
           architecture: x64
-
       - run: flutter build apk --release --split-per-abi
       - run: |
           flutter build ios --no-codesign
@@ -36,11 +36,3 @@ jobs:
           artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
-
-
-
-
-
-
-# push to master, main, develop
-# pull request on main master
